--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #d4edda; /* verde claro */
+    /* background-color: #d4edda; verde claro */
+    background-image: url('img/background-img.jpg');
+    background-size: cover;
+    background-repeat: repeat-y;
+    background-position: top center;
     margin: 0;
     padding-top: 60px; /* espaço para navbar fixa */
 }
