--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    /* background-color: #d4edda; verde claro */
     background-image: url('img/background-img.jpg');
     background-size: cover;
     background-repeat: repeat-y;
@@ -18,6 +17,10 @@ body {
     top: 0;
     width: 100%;
     z-index: 1000;
+}
+
+#mainNavbar {
+    background-color: #1d7882
 }
 
 /* ================= CARD ================= */
@@ -109,14 +112,14 @@ input.form-control, select.form-select {
     border-radius: 5px;
 }
 
-.tooltip {
+.custom-tooltip {
     position: relative;
     display: inline-block;
     cursor: pointer;
     margin-left: 5px;
 }
 
-.tooltip .tooltiptext {
+.custom-tooltip .custom-tooltiptext {
     visibility: hidden;
     width: 200px; /* largura do tooltip */
     background-color: black;
@@ -135,9 +138,16 @@ input.form-control, select.form-select {
     white-space: pre-wrap; /* quebra de linha no texto */
 }
 
-.tooltip:hover .tooltiptext {
+.custom-tooltip:hover .custom-tooltiptext {
     visibility: visible;
     opacity: 1;
+}
+
+.custom-tooltip-icon {
+    width: 16px;
+    height: 16px;
+    vertical-align: middle;
+    cursor: pointer;
 }
 
 
